Update swagger doc gen
